--- a/HomeBuddy.API/HomeBuddy.API.csproj
+++ b/HomeBuddy.API/HomeBuddy.API.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HomeBuddy.Service\HomeBuddy.Service.csproj" />
+  </ItemGroup>
+
 </Project>
