--- a/HomeBuddy.API/appsettings.json
+++ b/HomeBuddy.API/appsettings.json
@@ -9,5 +9,15 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=database-ss.diavan-valuation.asia;Initial Catalog=PRM392_HomeBuddy;User ID=sa;Password=Studyspace@2024;Encrypt=False"
+  },
+  "JWT": {
+    "ValidAudience": "https://localhost:7177",
+    "ValidIssuer": "https://localhost:7177",
+    "Secret": "ThisIsMySecretKeyWithHighSecurity123"
+  },
+  "FireBaseAdmin": {
+    "StorageBucket": "prm391-homebuddy.appspot.com",
+    "CredentialsFilePath": "./bin/Debug/net8.0/prm391-homebuddy-firebase-adminsdk-g8dj9-5501bef112.json"
   }
 }
+
