--- a/HomeBuddy.Data/HomeBuddy.Data.csproj
+++ b/HomeBuddy.Data/HomeBuddy.Data.csproj
@@ -22,4 +22,9 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <None Update="prm391-homebuddy-firebase-adminsdk-g8dj9-5501bef112.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
 </Project>
