--- a/HomeBuddy.Service/HomeBuddy.Service.csproj
+++ b/HomeBuddy.Service/HomeBuddy.Service.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HomeBuddy.Common\HomeBuddy.Common.csproj" />
     <ProjectReference Include="..\HomeBuddy.Data\HomeBuddy.Data.csproj" />
   </ItemGroup>
