--- a/HomeBuddy.API/appsettings.json
+++ b/HomeBuddy.API/appsettings.json
@@ -15,9 +15,17 @@
     "ValidIssuer": "https://localhost:7177",
     "Secret": "ThisIsMySecretKeyWithHighSecurity123"
   },
-  "FireBaseAdmin": {
-    "StorageBucket": "prm391-homebuddy.appspot.com",
-    "CredentialsFilePath": "./bin/Debug/net8.0/prm391-homebuddy-firebase-adminsdk-g8dj9-5501bef112.json"
+ 
+  "Firebase": {
+    "AuthEmail": "tivip1216vn@gmail.com",
+    "AuthPassword": "manh230402",
+    "apiKey": "AIzaSyDJTCwlGyWY83h9cf2dGFydfF-eov1Se9Y",
+    "authDomain": "prm391-homebuddy.firebaseapp.com",
+    "projectId": "prm391-homebuddy",
+    "storageBucket": "prm391-homebuddy.appspot.com",
+    "messagingSenderId": "1030469108322",
+    "appId": "1:1030469108322:web:c565dd2b6c3044ac47c73b",
+    "measurementId": "G-K9610T508Z"
   }
 }
 
