--- a/HomeBuddy.Data/HomeBuddy.Data.csproj
+++ b/HomeBuddy.Data/HomeBuddy.Data.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="FirebaseAdmin" Version="3.0.1" />
 		<PackageReference Include="Firebase.Auth" Version="1.0.0" />
+		<PackageReference Include="FirebaseAuthentication.net" Version="4.1.0" />
 		<PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
 		<PackageReference Include="Google.Cloud.Storage.V1" Version="4.10.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
